--- a/Flow.Launcher.Plugin.OpenAI/Flow.Launcher.Plugin.OpenAI.csproj
+++ b/Flow.Launcher.Plugin.OpenAI/Flow.Launcher.Plugin.OpenAI.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.5" />
     <PackageReference Include="Flow.Launcher.Plugin" Version="4.0.0" />
   </ItemGroup>
 
