--- a/Flow.Launcher.Plugin.OpenAI/Flow.Launcher.Plugin.OpenAI.csproj
+++ b/Flow.Launcher.Plugin.OpenAI/Flow.Launcher.Plugin.OpenAI.csproj
@@ -29,4 +29,17 @@
     <PackageReference Include="Flow.Launcher.Plugin" Version="4.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Images\app.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
